--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,8 @@
   <% end %>
 </div>
 <div id="romance-copy" style="text-align: center; margin-top: 80px">
-  <h2>Food That Helps You Think. Want in?</h2>
+  <h2>Fuel For Thought</h2>
+  <h2>Want in?</h2>
 </div>
 <div id="call-to-action" style="text-align: center; margin-top: 80px">
   <a class="btn btn-primary btn-large" data-toggle="modal" href="#request-invite">Request invite</a>
