--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -21,14 +21,47 @@
       %h2
         Sweets
       %h4
-        Cookies
+        Chocolate Temptations
+        -Dark, Milk Chocolate Ganache
+        -Hot Cinnamon Truffles
+        -Coconut Almond Clusters
       %h4
-        Lemon Bars
+        Cookies from Healthy to Decadent
+        -Upgraded Oatmeal Cookies
+      %h4
+        Custards
+        -Pumpkin Spice-seasonal-
+        -Chocolate
+        -Coconut
+      %h4
+        Sweet Breads
+        -Banana Nut Bread
+        -Zucchini Bread
+      %h4
+        -Light Italian Apple Cake
     .span6.pagination-centered
       %h2
-        Savory
+        Savories
       %h4
-        Quiche
+        Quiches 
+        Regular or Mini-sized 
+        from Healthy* to Wicked
+        -Onion, bacon and cheddar.
+        -Spinach and onion
+        -Sundried tomato and bacon
+        -Cheese, cheese and cheese.
       %h4
-        Bacon!
+        Tarts
+        -Tomato Tart with homemade herbed crust
+        -Onion and Curry tart
+      %h4
+        Breads from Basic to Ballistic
+      %h4
+        Bacon Candy! Classic Bacon, too.
+
+
+        *all quiches are available with an almond crust upon request
+
+       
+
 = render 'layouts/olark'
