--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -20,48 +20,78 @@
     .span6.pagination-centered
       %h2
         Sweets
-      %h4
+      %i.icon-thumbs-up  
+      %h3
         Chocolate Temptations
-        -Dark, Milk Chocolate Ganache
-        -Hot Cinnamon Truffles
-        -Coconut Almond Clusters
       %h4
+        Dark, Milk Chocolate Ganache
+      %h4
+        Hot Cinnamon Truffles
+      %h4
+        Coconut Almond Clusters
+
+      %i.icon-thumbs-up  
+      %h3
         Cookies from Healthy to Decadent
-        -Upgraded Oatmeal Cookies
       %h4
+        Upgraded Oatmeal Cookies
+
+      %i.icon-thumbs-up  
+      %h3
         Custards
-        -Pumpkin Spice-seasonal-
-        -Chocolate
-        -Coconut
       %h4
+        Pumpkin Spice (Seasonal)
+      %h4
+        Chocolate
+      %h4
+        Coconut
+
+      %i.icon-thumbs-up  
+      %h3
         Sweet Breads
-        -Banana Nut Bread
-        -Zucchini Bread
       %h4
-        -Light Italian Apple Cake
+        Banana Nut Bread
+      %h4  
+        Zucchini Bread
+      %h4
+        Light Italian Apple Cake
+
     .span6.pagination-centered
       %h2
         Savories
+
+      %i.icon-thumbs-up  
+      %h3
+        Quiches
       %h4
-        Quiches 
-        Regular or Mini-sized 
+        Regular or Mini-sized
         from Healthy* to Wicked
-        -Onion, bacon and cheddar.
-        -Spinach and onion
-        -Sundried tomato and bacon
-        -Cheese, cheese and cheese.
       %h4
+        Onion, bacon and cheddar.
+      %h4
+        Spinach and onion
+      %h4
+        Sundried tomato and bacon
+        Cheese, cheese and cheese.
+      %h4
+        *all quiches are available with 
+        an almond crust upon request
+      
+      %i.icon-thumbs-up  
+      %h3
         Tarts
-        -Tomato Tart with homemade herbed crust
-        -Onion and Curry tart
+      %h4
+        Tomato Tart with homemade herbed crust
+      %h4
+        Onion and Curry tart
       %h4
         Breads from Basic to Ballistic
+      
+      %i.icon-thumbs-up  
+      %h3
+        Bacon Candy! 
       %h4
-        Bacon Candy! Classic Bacon, too.
-
-
-        *all quiches are available with an almond crust upon request
-
-       
+        Classic Bacon, too.
+        
 
 = render 'layouts/olark'
