--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,11 +2,11 @@
 <ul class="nav">
   <% if user_signed_in? %>
     <li>
-    <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>        
+    <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
     </li>
   <% else %>
     <li>
-    <%= link_to 'Login', new_user_session_path %>  
+    <%= link_to 'Login', new_user_session_path %>
     </li>
   <% end %>
   <% if user_signed_in? %>
@@ -21,6 +21,9 @@
   <% else %>
     <li>
     <%= link_to 'Sign up', new_user_registration_path %>
+    </li>
+    <li>
+    <%= link_to 'Menu', pages_menu_path %>
     </li>
   <% end %>
 </ul>
