add menu page and link

--- a/app/views/pages/menu.html.haml
+++ b/app/views/pages/menu.html.haml
@@ -1,2 +1,80 @@
-%h1 Pages#menu
-%p Find me in app/views/pages/menu.html.haml
+.span12.pagination-centered
+  %h1 Menu
+
+.container
+  .row
+    .span6.pagination-centered
+      %h2
+        Sweets
+      %i.icon-thumbs-up
+      %h3
+        Chocolate Temptations
+      %h4
+        Dark, Milk Chocolate Ganache
+      %h4
+        Hot Cinnamon Truffles
+      %h4
+        Coconut Almond Clusters
+
+      %i.icon-thumbs-up
+      %h3
+        Cookies from Healthy to Decadent
+      %h4
+        Upgraded Oatmeal Cookies
+
+      %i.icon-thumbs-up
+      %h3
+        Custards
+      %h4
+        Pumpkin Spice (Seasonal)
+      %h4
+        Chocolate
+      %h4
+        Coconut
+
+      %i.icon-thumbs-up
+      %h3
+        Sweet Breads
+      %h4
+        Banana Nut Bread
+      %h4
+        Zucchini Bread
+      %h4
+        Light Italian Apple Cake
+
+    .span6.pagination-centered
+      %h2
+        Savories
+
+      %i.icon-thumbs-up
+      %h3
+        Quiches
+      %h4
+        Regular or Mini-sized
+        from Healthy* to Wicked
+      %h4
+        Onion, bacon and cheddar.
+      %h4
+        Spinach and onion
+      %h4
+        Sundried tomato and bacon
+        Cheese, cheese and cheese.
+      %h4
+        *all quiches are available with
+        an almond crust upon request
+
+      %i.icon-thumbs-up
+      %h3
+        Tarts
+      %h4
+        Tomato Tart with homemade herbed crust
+      %h4
+        Onion and Curry tart
+      %h4
+        Breads from Basic to Ballistic
+
+      %i.icon-thumbs-up
+      %h3
+        Bacon Candy!
+      %h4
+        Classic Bacon, too.
